--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,7 +2,7 @@
 
 body {
   padding:50px;
-  font: 1em Lato, "Helvetica Neue", Verdana, Arial, sans-serif;
+  font: 1em "Lato", sans-serif;
   color:#777;
   font-weight:300;
 }
