--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,8 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu);
 
 body {
   padding:50px;
-  font: 1em "Lato", sans-serif;
+  font: 1em 'Ubuntu', sans-serif;
   color:#777;
   font-weight:300;
 }
