--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu);
 
 .avatar {
-  padding:2em;
+  padding:.5em;
   border: 2px solid;
   box-shadow: 10px 10px 5px #888888;
   border-radius: 50px 15px;
