--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -1,16 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Ubuntu);
-
-.avatar {
-  padding:.5em;
-  border: 2px solid;
-  box-shadow: 7px 7px 5px #888888;
-  border-radius: 50px 15px;
-}
+@import "fonts";
+@import "rouge-github";
 
 body {
+  background-color: #fff;
   padding:50px;
-  font: 1em 'Ubuntu', sans-serif;
-  color:#777;
+  font: 1em 'Ubuntu', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:#727272;
   font-weight:300;
 }
 
@@ -28,7 +23,6 @@ h1, h2, h3 {
 }
 
 h1 {
-  padding-top: .5em;
   font-size:28px;
 }
 
@@ -42,15 +36,22 @@ h3, h4, h5, h6 {
 
 a {
   color:#39c;
-  font-weight:400;
   text-decoration:none;
+}
+
+a:hover {
+  color:#069;
 }
 
 a small {
   font-size:11px;
   color:#777;
-  margin-top:-0.6em;
+  margin-top:-0.3em;
   display:block;
+}
+
+a:hover small {
+  color:#777;
 }
 
 .wrapper {
@@ -66,14 +67,14 @@ blockquote {
 }
 
 code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
   color:#333;
   font-size:12px;
 }
 
 pre {
   padding:8px 15px;
-  background: #f8f8f8;  
+  background: #f8f8f8;
   border-radius:5px;
   border:1px solid #e5e5e5;
   overflow-x: auto;
@@ -102,38 +103,37 @@ th {
 img {
   max-width:100%;
 }
-
+/* I have this commented out*/
 header {
   width:270px;
   float:left;
   position:fixed;
+  -webkit-font-smoothing:subpixel-antialiased;
 }
 
-/*header ul {
+header ul {
   list-style:none;
   height:40px;
-  
   padding:0;
-  
-  background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  
+  background: #f4f4f4;
   border-radius:5px;
-  border:1px solid #d2d2d2;
-  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
+  border:1px solid #e0e0e0;
   width:270px;
 }
 
 header li {
   width:89px;
   float:left;
-  border-right:1px solid #d2d2d2;
+  border-right:1px solid #e0e0e0;
   height:40px;
+}
+
+header li:first-child a {
+  border-radius:5px 0 0 5px;
+}
+
+header li:last-child a {
+  border-radius:0 5px 5px 0;
 }
 
 header ul a {
@@ -143,17 +143,20 @@ header ul a {
   display:block;
   text-align:center;
   padding-top:6px;
-  height:40px;
+  height:34px;
+}
+
+header ul a:hover {
+  color:#999;
+}
+
+header ul a:active {
+  background-color:#f0f0f0;
 }
 
 strong {
   color:#222;
   font-weight:700;
-}
-
-header ul li + li {
-  width:88px;
-  border-left:1px solid #fff;
 }
 
 header ul li + li + li {
@@ -165,8 +168,8 @@ header ul a strong {
   font-size:14px;
   display:block;
   color:#222;
-}*/
-
+}
+/* all the way to here*/
 section {
   width:500px;
   float:right;
@@ -189,36 +192,37 @@ footer {
   float:left;
   position:fixed;
   bottom:50px;
+  -webkit-font-smoothing:subpixel-antialiased;
 }
 
 @media print, screen and (max-width: 960px) {
-  
+
   div.wrapper {
     width:auto;
     margin:0;
   }
-  
+
   header, section, footer {
     float:none;
     position:static;
     width:auto;
   }
-  
+
   header {
     padding-right:320px;
   }
-  
+
   section {
     border:1px solid #e5e5e5;
     border-width:1px 0;
     padding:20px 0;
     margin:0 0 20px;
   }
-  
+
   header a small {
     display:inline;
   }
-  
+
   header ul {
     position:absolute;
     right:50px;
@@ -230,15 +234,15 @@ footer {
   body {
     word-wrap:break-word;
   }
-  
+
   header {
     padding:0;
   }
-  
+
   header ul, header p.view {
     position:static;
   }
-  
+
   pre, code {
     word-wrap:normal;
   }
@@ -248,9 +252,13 @@ footer {
   body {
     padding:15px;
   }
-  
+
   header ul {
-    display:none;
+    width:99%;
+  }
+
+  header li, header ul li + li + li {
+    width:33%;
   }
 }
 
@@ -260,28 +268,4 @@ footer {
     font-size:12pt;
     color:#444;
   }
-}
-nav ul  {
-    margin: .5em 1em;
-    padding:0;
-}
-nav ul li {
-    /*display:inline;*/
-    margin:.5em 1em;
-    border-radius: 5px;
-    padding: .5em 1em;
-}
-nav ul li:hover {
-  background-color: #A83D11;
-  color: #fff;
-    display:inline;
-    margin:.5em 1em;
-    border-radius: 5px;
-    padding: .5em 1em;
-}
-section {
-  padding:2em;
-  border: 2px solid;
-    border-radius: 25px;
-  box-shadow: 10px 10px 5px #888888;
 }
