--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,12 @@ section {
   box-shadow: 10px 10px 5px #888888;
 }
 
+section.pagination {
+  border: 0px solid;
+  box-shadow: 0px 0px 0px #fff;
+  text-align: center;
+}
+
 header ul a:hover {
   background-color:#39c;
 }
