--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,7 @@
 
 .avatar {
   padding:.5em;
-  margin-bottom: 2em;
+  margin-bottom: 1.2em;
   border: 2px solid;
   box-shadow: 7px 7px 5px #888888;
   border-radius: 50px 15px;
@@ -26,11 +26,24 @@ section {
   padding:2em;
   margin-bottom: 2em;
   border: 2px solid;
-    border-radius: 25px;
+  border-radius: 25px;
   box-shadow: 10px 10px 5px #888888;
 }
 
+.post-nav a {
+  display: inline-block;
+  margin: .5em;
+  padding:1.5em;
+  border: 2px solid #727272;
+  border-radius: 15px;
+}
+
+.post-nav a:hover {
+  box-shadow: inset 2px 2px 4px 2px #bbb;
+} 
+
 section.pagination {
+  padding: 1em;
   border: 0px solid;
   box-shadow: 0px 0px 0px #fff;
   text-align: center;
@@ -48,7 +61,7 @@ header ul a.active {
   display: block;
   text-align: center;
   margin: auto;
-  padding-top: .4em;
+  padding-top: .3em;
   font-family: 'Racing Sans One', cursive;
   /*font-size: 12em;*/
 }
