--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
 ---
 ---
-@import url(http://fonts.googleapis.com/css?family=Play|Cinzel+Decorative|Racing+Sans+One);
+@import url(https://fonts.googleapis.com/css?family=Play|Cinzel+Decorative|Racing+Sans+One);
 @import url(https://fonts.googleapis.com/css?family=Ubuntu);
 @import "{{site.theme}}";
 
