--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,14 @@
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="shortcut icon" href="{{ '/assets/favicon.ico' | prepend: site.baseurl }}" type="image/x-icon">
-  <link rel="icon" href="{{ '/assets/favicon.ico' | prepend: site.baseurl }}" type="image/x-icon">
+  <!--link rel="icon" href="{{ '/assets/favicon.ico' | prepend: site.baseurl }}" type="image/x-icon"-->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+  <link rel="manifest" href="/assets/manifest.json">
+  <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#d1232a">
+  <meta name="theme-color" content="#ffffff">
 
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
