--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,10 @@
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge">
   <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
   <!--title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title-->
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <meta name="viewport" content="width=device-width , initial-scale=1, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width , initial-scale=1, maximum-scale=2.0">
   <meta name="description" content="{{ site.description }}">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
