--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
   <!--title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title-->
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
