--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -83,6 +83,10 @@ a.readmore:hover {
   font-size: .75em;
 }
 
+footer {
+  bottom: 20px;
+}
+
 @media print, screen and (max-width: 480px) {
   .avatar {
     width: 120px;
