--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     <span class="vcard-detail py-1 css-truncate css-truncate-target" title="SoCal"><svg aria-hidden="true" class="octicon octicon-location" height="16" role="img" version="1.1" viewBox="0 0 12 16" width="12"><path d="M6 0C2.69 0 0 2.5 0 5.5c0 4.52 6 10.5 6 10.5s6-5.98 6-10.5C12 2.5 9.31 0 6 0z m0 14.55C4.14 12.52 1 8.44 1 5.5 1 3.02 3.25 1 6 1c1.34 0 2.61 0.48 3.56 1.36 0.92 0.86 1.44 1.97 1.44 3.14 0 2.94-3.14 7.02-5 9.05z m2-9.05c0 1.11-0.89 2-2 2s-2-0.89-2-2 0.89-2 2-2 2 0.89 2 2z"></path></svg> - SoCal</span>&emsp;
     <span class="vcard-detail py-1 css-truncate css-truncate-target"><svg aria-hidden="true" class="octicon octicon-clock" height="16" role="img" version="1.1" viewBox="0 0 14 16" width="14"><path d="M8 8h3v2H7c-0.55 0-1-0.45-1-1V4h2v4z m-1-5.7c3.14 0 5.7 2.56 5.7 5.7S10.14 13.7 7 13.7 1.3 11.14 1.3 8s2.56-5.7 5.7-5.7m0-1.3C3.14 1 0 4.14 0 8s3.14 7 7 7 7-3.14 7-7S10.86 1 7 1z"></path></svg><span class="join-label">
     {% if page.date %}
-     - Published </span><time class="join-date" datetime="{{ page.date }}"  is="local-time" title="{{ page.date | date: "%b %-d, %Y, %r %T" }}"> : {{ page.date | date: "%b %-d, %Y" }}</time>
+     - Published </span><time class="join-date" datetime="{{ page.date |  date_to_xmlschema }}"  is="local-time" title="{{ page.date | date: "%b %-d, %Y, %r %T" }}"> : {{ page.date | date: "%b %-d, %Y" }}</time>
     {% else %}
      - Joined </span><time class="join-date" datetime="2013-01-22T18:49:36Z"  is="local-time" title="Jan 22, 2013, 10:49 AM PST"> : Jan 22, 2013</time>
     {% endif %}
